--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中萌集团·China Moe</title>
+    <title>中萌互动·China Moe</title>
     <style>
-        /* 全局样式 */
+
         body, html {
             margin: 0;
             padding: 0;
@@ -17,12 +17,10 @@
             font-family: Arial, sans-serif;
         }
 
-        /* 图片容器 */
         .image-container {
             text-align: center;
         }
 
-        /* 图片样式 */
         .image-container img {
             max-width: 100%;
             height: auto;
@@ -30,7 +28,6 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        /* 响应式设计 */
         @media (max-width: 600px) {
             .image-container img {
                 max-width: 90%;
@@ -40,7 +37,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="index.jpg" alt="示例图片">
+        <img src="index.png">
     </div>
 </body>
 </html>
