--- a/index.html
+++ b/index.html
@@ -5,41 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>中萌互动·China Moe</title>
     <style>
-
-        body, html {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
             height: 100%;
-            overflow: hidden; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #fff; 
+            overflow: hidden;
         }
-
-
         .fullscreen-image {
-            position: relative;
-            width: 100vw; 
-            height: 100vh; 
             display: flex;
             justify-content: center;
             align-items: center;
-        }
-
-
-        .fullscreen-image img {
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
-            object-fit: contain; 
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            /* 使用 background-image 属性嵌入图片 */
+            background-image: url('index.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     </style>
 </head>
 <body>
-    <div class="fullscreen-image">
-        <img src="index.png" >
-    </div>
+    <div class="fullscreen-image"></div>
 </body>
 </html>
