--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             height: 100%;
             background-color: #fff;
             /* 使用 background-image 属性嵌入图片 */
-            background-image: url('index.jpg');
+            background-image: url('index.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
