--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             width: 100%;
             height: 100%;
-            background-color: #000;
+            background-color: #fff;
             /* 使用 background-image 属性嵌入图片 */
             background-image: url('index.png');
             background-size: contain;
